--- a/lib/src/Makefile.am
+++ b/lib/src/Makefile.am
@@ -22,7 +22,7 @@ lib_LTLIBRARIES = libgsasl.la
 AM_CFLAGS = $(WERROR_CFLAGS) $(WSTACK_CFLAGS) $(WARN_CFLAGS)
 AM_CFLAGS += $(CFLAG_VISIBILITY)
 AM_CPPFLAGS = -I$(srcdir)/../gl -I../gl -I$(srcdir)/.. -DGSASL_BUILDING
-DEFS = -DLOCALEDIR=\"$(datadir)/locale\" @DEFS@
+AM_CPPFLAGS += -DLOCALEDIR=\"$(datadir)/locale\"
 
 EXTRA_DIST = doxygen.c
 
